@@ -21,4 +21,4 @@ Suggests:
     microbenchmark
 LazyData: yes
 ByteCompile: yes
-Version: 1.8
+Version: 1.9
